# syn_data_gen

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: advanced_usage.py  basic_usage.py  example_usage.py
src/syn_data_gen/: __init__.py  cli.py
src/synthetic_marketing_data/: __init__.py  cli.py  core.py
src/synthetic_marketing_data/correlations/: feature_correlations.py
src/synthetic_marketing_data/distributions/: custom_distribution.py
src/synthetic_marketing_data/generators/: campaign_generator.py  customer_generator.py
src/synthetic_marketing_data/scenarios/: market_scenarios.py
tests/: __init__.py  test_core.py  test_correlations.py  test_distributions.py  test_generators.py  test_scenarios.py  test_syn_data_gen.py
